src/generated/CompiladorParser.py
# Generated from grammar/Compilador.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CompiladorParser ( Parser ):

    grammarFileName = "Compilador.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'~'", "<INVALID>", "';'", "'.'", "':'", "','", "'('", 
                     "')'", "':='" ]

    symbolicNames = [ "<INVALID>", "PROGRAM", "INTEGER", "BOOLEAN", "STRING", 
                      "BEGIN", "END", "WHILE", "DO", "READ", "VAR", "FALSE", 
                      "TRUE", "WRITE", "IF", "THEN", "ELSE", "OPAD", "OPMULT", 
                      "OPLOG", "OPNEG", "OPREL", "PVIG", "PONTO", "DPONTOS", 
                      "VIG", "ABPAR", "FPAR", "ATRIB", "CADEIA", "CTE", 
                      "ID", "COMMENT", "WS", "UNCLOSED_STRING", "ERROR_CHAR" ]

    RULE_programa = 0
    RULE_decls = 1
    RULE_declTip = 2
    RULE_listId = 3
    RULE_tip = 4
    RULE_cmdComp = 5
    RULE_listCmd = 6
    RULE_cmd = 7
    RULE_cmdIf = 8
    RULE_cmdWhile = 9
    RULE_cmdRead = 10
    RULE_cmdWrite = 11
    RULE_listW = 12
    RULE_elemW = 13
    RULE_cmdAtrib = 14
    RULE_expr = 15
    RULE_logicExpr = 16
    RULE_relationalExpr = 17
    RULE_additiveExpr = 18
    RULE_multiplicativeExpr = 19
    RULE_unaryExpr = 20
    RULE_primaryExpr = 21

    ruleNames =  [ "programa", "decls", "declTip", "listId", "tip", "cmdComp", 
                   "listCmd", "cmd", "cmdIf", "cmdWhile", "cmdRead", "cmdWrite", 
                   "listW", "elemW", "cmdAtrib", "expr", "logicExpr", "relationalExpr", 
                   "additiveExpr", "multiplicativeExpr", "unaryExpr", "primaryExpr" ]

    EOF = Token.EOF
    PROGRAM=1
    INTEGER=2
    BOOLEAN=3
    STRING=4
    BEGIN=5
    END=6
    WHILE=7
    DO=8
    READ=9
    VAR=10
    FALSE=11
    TRUE=12
    WRITE=13
    IF=14
    THEN=15
    ELSE=16
    OPAD=17
    OPMULT=18
    OPLOG=19
    OPNEG=20
    OPREL=21
    PVIG=22
    PONTO=23
    DPONTOS=24
    VIG=25
    ABPAR=26
    FPAR=27
    ATRIB=28
    CADEIA=29
    CTE=30
    ID=31
    COMMENT=32
    WS=33
    UNCLOSED_STRING=34
    ERROR_CHAR=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(CompiladorParser.PROGRAM, 0)

        def ID(self):
            return self.getToken(CompiladorParser.ID, 0)

        def PVIG(self):
            return self.getToken(CompiladorParser.PVIG, 0)

        def cmdComp(self):
            return self.getTypedRuleContext(CompiladorParser.CmdCompContext,0)


        def PONTO(self):
            return self.getToken(CompiladorParser.PONTO, 0)

        def EOF(self):
            return self.getToken(CompiladorParser.EOF, 0)

        def decls(self):
            return self.getTypedRuleContext(CompiladorParser.DeclsContext,0)


        def getRuleIndex(self):
            return CompiladorParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = CompiladorParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(CompiladorParser.PROGRAM)
            self.state = 45
            self.match(CompiladorParser.ID)
            self.state = 46
            self.match(CompiladorParser.PVIG)
            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 47
                self.decls()


            self.state = 50
            self.cmdComp()
            self.state = 51
            self.match(CompiladorParser.PONTO)
            self.state = 52
            self.match(CompiladorParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(CompiladorParser.VAR, 0)

        def declTip(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiladorParser.DeclTipContext)
            else:
                return self.getTypedRuleContext(CompiladorParser.DeclTipContext,i)


        def getRuleIndex(self):
            return CompiladorParser.RULE_decls

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecls" ):
                listener.enterDecls(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecls" ):
                listener.exitDecls(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecls" ):
                return visitor.visitDecls(self)
            else:
                return visitor.visitChildren(self)




    def decls(self):

        localctx = CompiladorParser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decls)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(CompiladorParser.VAR)
            self.state = 56 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 55
                self.declTip()
                self.state = 58 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==31):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclTipContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listId(self):
            return self.getTypedRuleContext(CompiladorParser.ListIdContext,0)


        def DPONTOS(self):
            return self.getToken(CompiladorParser.DPONTOS, 0)

        def tip(self):
            return self.getTypedRuleContext(CompiladorParser.TipContext,0)


        def PVIG(self):
            return self.getToken(CompiladorParser.PVIG, 0)

        def getRuleIndex(self):
            return CompiladorParser.RULE_declTip

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclTip" ):
                listener.enterDeclTip(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclTip" ):
                listener.exitDeclTip(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclTip" ):
                return visitor.visitDeclTip(self)
            else:
                return visitor.visitChildren(self)




    def declTip(self):

        localctx = CompiladorParser.DeclTipContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declTip)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.listId()
            self.state = 61
            self.match(CompiladorParser.DPONTOS)
            self.state = 62
            self.tip()
            self.state = 63
            self.match(CompiladorParser.PVIG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListIdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CompiladorParser.ID)
            else:
                return self.getToken(CompiladorParser.ID, i)

        def VIG(self, i:int=None):
            if i is None:
                return self.getTokens(CompiladorParser.VIG)
            else:
                return self.getToken(CompiladorParser.VIG, i)

        def getRuleIndex(self):
            return CompiladorParser.RULE_listId

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListId" ):
                listener.enterListId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListId" ):
                listener.exitListId(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListId" ):
                return visitor.visitListId(self)
            else:
                return visitor.visitChildren(self)




    def listId(self):

        localctx = CompiladorParser.ListIdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_listId)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(CompiladorParser.ID)
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25:
                self.state = 66
                self.match(CompiladorParser.VIG)
                self.state = 67
                self.match(CompiladorParser.ID)
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(CompiladorParser.INTEGER, 0)

        def BOOLEAN(self):
            return self.getToken(CompiladorParser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(CompiladorParser.STRING, 0)

        def getRuleIndex(self):
            return CompiladorParser.RULE_tip

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTip" ):
                listener.enterTip(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTip" ):
                listener.exitTip(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTip" ):
                return visitor.visitTip(self)
            else:
                return visitor.visitChildren(self)




    def tip(self):

        localctx = CompiladorParser.TipContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tip)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 28) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdCompContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN(self):
            return self.getToken(CompiladorParser.BEGIN, 0)

        def listCmd(self):
            return self.getTypedRuleContext(CompiladorParser.ListCmdContext,0)


        def END(self):
            return self.getToken(CompiladorParser.END, 0)

        def getRuleIndex(self):
            return CompiladorParser.RULE_cmdComp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdComp" ):
                listener.enterCmdComp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdComp" ):
                listener.exitCmdComp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdComp" ):
                return visitor.visitCmdComp(self)
            else:
                return visitor.visitChildren(self)




    def cmdComp(self):

        localctx = CompiladorParser.CmdCompContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_cmdComp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(CompiladorParser.BEGIN)
            self.state = 76
            self.listCmd()
            self.state = 77
            self.match(CompiladorParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListCmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cmd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiladorParser.CmdContext)
            else:
                return self.getTypedRuleContext(CompiladorParser.CmdContext,i)


        def PVIG(self, i:int=None):
            if i is None:
                return self.getTokens(CompiladorParser.PVIG)
            else:
                return self.getToken(CompiladorParser.PVIG, i)

        def getRuleIndex(self):
            return CompiladorParser.RULE_listCmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListCmd" ):
                listener.enterListCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListCmd" ):
                listener.exitListCmd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListCmd" ):
                return visitor.visitListCmd(self)
            else:
                return visitor.visitChildren(self)




    def listCmd(self):

        localctx = CompiladorParser.ListCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_listCmd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.cmd()
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==22:
                self.state = 80
                self.match(CompiladorParser.PVIG)
                self.state = 81
                self.cmd()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cmdIf(self):
            return self.getTypedRuleContext(CompiladorParser.CmdIfContext,0)


        def cmdWhile(self):
            return self.getTypedRuleContext(CompiladorParser.CmdWhileContext,0)


        def cmdRead(self):
            return self.getTypedRuleContext(CompiladorParser.CmdReadContext,0)


        def cmdWrite(self):
            return self.getTypedRuleContext(CompiladorParser.CmdWriteContext,0)


        def cmdAtrib(self):
            return self.getTypedRuleContext(CompiladorParser.CmdAtribContext,0)


        def cmdComp(self):
            return self.getTypedRuleContext(CompiladorParser.CmdCompContext,0)


        def getRuleIndex(self):
            return CompiladorParser.RULE_cmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmd" ):
                listener.enterCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmd" ):
                listener.exitCmd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmd" ):
                return visitor.visitCmd(self)
            else:
                return visitor.visitChildren(self)




    def cmd(self):

        localctx = CompiladorParser.CmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_cmd)
        try:
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14]:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.cmdIf()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.cmdWhile()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 89
                self.cmdRead()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 4)
                self.state = 90
                self.cmdWrite()
                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 5)
                self.state = 91
                self.cmdAtrib()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 6)
                self.state = 92
                self.cmdComp()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdIfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(CompiladorParser.IF, 0)

        def expr(self):
            return self.getTypedRuleContext(CompiladorParser.ExprContext,0)


        def THEN(self):
            return self.getToken(CompiladorParser.THEN, 0)

        def cmd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiladorParser.CmdContext)
            else:
                return self.getTypedRuleContext(CompiladorParser.CmdContext,i)


        def ELSE(self):
            return self.getToken(CompiladorParser.ELSE, 0)

        def getRuleIndex(self):
            return CompiladorParser.RULE_cmdIf

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdIf" ):
                listener.enterCmdIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdIf" ):
                listener.exitCmdIf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdIf" ):
                return visitor.visitCmdIf(self)
            else:
                return visitor.visitChildren(self)




    def cmdIf(self):

        localctx = CompiladorParser.CmdIfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_cmdIf)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(CompiladorParser.IF)
            self.state = 96
            self.expr()
            self.state = 97
            self.match(CompiladorParser.THEN)
            self.state = 98
            self.cmd()
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 99
                self.match(CompiladorParser.ELSE)
                self.state = 100
                self.cmd()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdWhileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(CompiladorParser.WHILE, 0)

        def expr(self):
            return self.getTypedRuleContext(CompiladorParser.ExprContext,0)


        def DO(self):
            return self.getToken(CompiladorParser.DO, 0)

        def cmd(self):
            return self.getTypedRuleContext(CompiladorParser.CmdContext,0)


        def getRuleIndex(self):
            return CompiladorParser.RULE_cmdWhile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdWhile" ):
                listener.enterCmdWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdWhile" ):
                listener.exitCmdWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdWhile" ):
                return visitor.visitCmdWhile(self)
            else:
                return visitor.visitChildren(self)




    def cmdWhile(self):

        localctx = CompiladorParser.CmdWhileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_cmdWhile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(CompiladorParser.WHILE)
            self.state = 104
            self.expr()
            self.state = 105
            self.match(CompiladorParser.DO)
            self.state = 106
            self.cmd()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdReadContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(CompiladorParser.READ, 0)

        def ABPAR(self):
            return self.getToken(CompiladorParser.ABPAR, 0)

        def listId(self):
            return self.getTypedRuleContext(CompiladorParser.ListIdContext,0)


        def FPAR(self):
            return self.getToken(CompiladorParser.FPAR, 0)

        def getRuleIndex(self):
            return CompiladorParser.RULE_cmdRead

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdRead" ):
                listener.enterCmdRead(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdRead" ):
                listener.exitCmdRead(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdRead" ):
                return visitor.visitCmdRead(self)
            else:
                return visitor.visitChildren(self)




    def cmdRead(self):

        localctx = CompiladorParser.CmdReadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_cmdRead)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(CompiladorParser.READ)
            self.state = 109
            self.match(CompiladorParser.ABPAR)
            self.state = 110
            self.listId()
            self.state = 111
            self.match(CompiladorParser.FPAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdWriteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WRITE(self):
            return self.getToken(CompiladorParser.WRITE, 0)

        def ABPAR(self):
            return self.getToken(CompiladorParser.ABPAR, 0)

        def listW(self):
            return self.getTypedRuleContext(CompiladorParser.ListWContext,0)


        def FPAR(self):
            return self.getToken(CompiladorParser.FPAR, 0)

        def getRuleIndex(self):
            return CompiladorParser.RULE_cmdWrite

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdWrite" ):
                listener.enterCmdWrite(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdWrite" ):
                listener.exitCmdWrite(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdWrite" ):
                return visitor.visitCmdWrite(self)
            else:
                return visitor.visitChildren(self)




    def cmdWrite(self):

        localctx = CompiladorParser.CmdWriteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_cmdWrite)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(CompiladorParser.WRITE)
            self.state = 114
            self.match(CompiladorParser.ABPAR)
            self.state = 115
            self.listW()
            self.state = 116
            self.match(CompiladorParser.FPAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListWContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elemW(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiladorParser.ElemWContext)
            else:
                return self.getTypedRuleContext(CompiladorParser.ElemWContext,i)


        def VIG(self, i:int=None):
            if i is None:
                return self.getTokens(CompiladorParser.VIG)
            else:
                return self.getToken(CompiladorParser.VIG, i)

        def getRuleIndex(self):
            return CompiladorParser.RULE_listW

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListW" ):
                listener.enterListW(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListW" ):
                listener.exitListW(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListW" ):
                return visitor.visitListW(self)
            else:
                return visitor.visitChildren(self)




    def listW(self):

        localctx = CompiladorParser.ListWContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_listW)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.elemW()
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25:
                self.state = 119
                self.match(CompiladorParser.VIG)
                self.state = 120
                self.elemW()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElemWContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(CompiladorParser.ExprContext,0)


        def CADEIA(self):
            return self.getToken(CompiladorParser.CADEIA, 0)

        def getRuleIndex(self):
            return CompiladorParser.RULE_elemW

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElemW" ):
                listener.enterElemW(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElemW" ):
                listener.exitElemW(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElemW" ):
                return visitor.visitElemW(self)
            else:
                return visitor.visitChildren(self)




    def elemW(self):

        localctx = CompiladorParser.ElemWContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_elemW)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11, 12, 17, 20, 26, 30, 31]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.expr()
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.match(CompiladorParser.CADEIA)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdAtribContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CompiladorParser.ID, 0)

        def ATRIB(self):
            return self.getToken(CompiladorParser.ATRIB, 0)

        def expr(self):
            return self.getTypedRuleContext(CompiladorParser.ExprContext,0)


        def getRuleIndex(self):
            return CompiladorParser.RULE_cmdAtrib

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdAtrib" ):
                listener.enterCmdAtrib(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdAtrib" ):
                listener.exitCmdAtrib(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdAtrib" ):
                return visitor.visitCmdAtrib(self)
            else:
                return visitor.visitChildren(self)




    def cmdAtrib(self):
